# language-universal-parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  train-cross-lingual-parsers.tape  typological_properties.txt.zhang15  typological_properties_id_tgt_en.txt  typological_properties_id_tgt_es.txt  typological_properties_id_tgt_fi.txt  typological_properties_id_tgt_hu.txt  typological_properties_id_tgt_it.txt  typological_properties_id_tgt_sv.txt
parser/: CMakeLists.txt  c2.h  lstm-parse.cc
typological_properties/: typological_family_averaged_wals.csv  typological_properties.txt.all  typological_properties.txt.all.sept15  typological_properties.txt.first22  typological_properties.txt.naseem12  typological_properties.txt.pat_genus_avg  typological_properties.xlsx  typological_properties_id.txt  typological_properties_id_tgt_cs.txt  typological_properties_id_tgt_de.txt  typological_properties_id_tgt_fr.txt  typological_properties_id_tgt_ga.txt  typological_properties_none.txt
